# Unstruck-Engine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  README.md  deep-research-agentic-unstructured-data.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: agents.yaml  budgets.yaml  default.yaml  guardrails.yaml  models.yaml  permissions.yaml  tools.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
prompts/agents/: analyst.md  kg_reasoner.md  synthesizer.md
prompts/guardrails/: input_safety.md  output_safety.md
prompts/orchestrator/: decide.md  evaluate.md  strategize.md  understand.md
scripts/: run.py
src/mas/: __init__.py  cli.py  config.py  pipeline.py  session.py
src/mas/a2a/: __init__.py  bus.py  protocol.py
src/mas/agents/: __init__.py  base.py  registry.py
src/mas/agents/ingestion/: __init__.py  chunker.py  ingest.py  separator.py
src/mas/agents/kg/: __init__.py  builder.py  query.py
src/mas/agents/modal/: __init__.py  base_modal.py  image_processor.py  table_processor.py  text_processor.py
src/mas/agents/protocol/: __init__.py  explorer.py  extractor.py  reviewer.py
src/mas/agents/rag/: __init__.py  engine.py  multimodal.py  parser.py  raganything_agent.py  retriever.py
src/mas/agents/reasoning/: __init__.py  analyst.py  synthesizer.py
src/mas/agents/research/: __init__.py  researcher.py  synthesizer.py
src/mas/agents/retrieval/: __init__.py  embedder.py  hybrid.py
src/mas/api/: events.py  server.py  storage.py
src/mas/api/routers/: conversations.py  files.py  knowledge_graph.py  query.py  ws.py
src/mas/llmops/: __init__.py  cost_tracker.py  evaluation.py  monitoring.py  tracing.py
src/mas/memory/: __init__.py  knowledge_graph.py  local.py  shared.py
src/mas/orchestrator/: __init__.py  context_merger.py  graph.py  ledgers.py  planner.py  router.py  state.py  token_budget.py
src/mas/schemas/: __init__.py  context.py  messages.py  results.py  tasks.py
src/mas/tools/: __init__.py  mcp_client.py  parsers.py  search.py
src/mas/utils/: __init__.py  parsing.py  security.py
src/unstruck/: __init__.py  config.py
src/unstruck/agents/: __init__.py  base.py  builtin.py  permissions.py  registry.py  router.py
src/unstruck/api/: __init__.py  bootstrap.py  server.py
src/unstruck/api/routers/: __init__.py  conversations.py  files.py  health.py  query.py
src/unstruck/context/: __init__.py  budget.py  engine.py  result.py  tokens.py
src/unstruck/hooks/: __init__.py  manager.py
src/unstruck/llmops/: __init__.py  audit.py  cost.py  evaluation.py
src/unstruck/memory/: __init__.py  cache.py  session.py
src/unstruck/orchestrator/: __init__.py  brain.py  ledgers.py  state.py
src/unstruck/rag/: __init__.py  service.py  tools.py
src/unstruck/schemas/: __init__.py  result.py  task.py
src/unstruck/tools/: __init__.py  builtin.py  guardrails.py  registry.py  sandbox.py
tests/: test_a2a.py  test_agents.py  test_cost_tracker.py  test_mcp_tools.py  test_memory.py  test_schemas.py
tests/unit/: test_agents.py  test_api.py  test_config.py  test_context.py  test_hooks.py  test_memory.py  test_orchestrator.py  test_rag.py  test_tools.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts
ui/src/: App.tsx  index.css
ui/src/lib/: api.ts  sse.ts  types.ts  utils.ts
ui/src/stores/: agent-store.ts  conversation-store.ts  stream-store.ts  ui-store.ts
(+9 files in other folders)
