[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unstruck-engine"
version = "2.0.0"
description = "Multi-agent orchestration platform — config-driven, plugin-based, production-grade"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # --- Orchestration ---
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",

    # --- RAG ---
    "raganything>=1.0.0",

    # --- API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # --- Config ---
    "pyyaml>=6.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",

    # --- Token management ---
    "tiktoken>=0.7.0",

    # --- LLMOps ---
    "structlog>=24.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",

    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",

    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unstruck"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
